crates/tackc_parser/src/ast/snapshots/tackc_parser__ast__prog__run_prog_test.snap
---
source: crates/tackc_parser/src/ast/prog.rs
expression: expr
input_file: crates/tackc_parser/src/ast/prog-parse/basic.tck
---
Ok(Program(
  mod_stmt: ModStatement(
    span: Span(
      start: 0,
      end: 9,
    ),
    path: Path(
      span: Span(
        start: 4,
        end: 8,
      ),
      components: [
        Symbol(
          span: Span(
            start: 4,
            end: 8,
          ),
          inner: Interned(7250452609033638561, PhantomData),
        ),
      ],
      id: NodeId(0),
    ),
    id: NodeId(1),
  ),
  items: [
    FuncItem(FuncItem(
      span: Span(
        start: 11,
        end: 44,
      ),
      ident: Symbol(
        span: Span(
          start: 16,
          end: 20,
        ),
        inner: Interned(812864953376315205, PhantomData),
      ),
      params: [],
      ret_ty: Some(Expression(
        span: Span(
          start: 23,
          end: 26,
        ),
        kind: Primary(Primary(
          span: Span(
            start: 23,
            end: 26,
          ),
          kind: I32,
          id: NodeId(2),
        )),
        id: NodeId(3),
      )),
      block: Block(
        span: Span(
          start: 27,
          end: 44,
        ),
        stmts: [],
        expr: Some(Expression(
          span: Span(
            start: 33,
            end: 42,
          ),
          kind: Call(Expression(
            span: Span(
              start: 33,
              end: 36,
            ),
            kind: Primary(Primary(
              span: Span(
                start: 33,
                end: 36,
              ),
              kind: Binding(Symbol(
                span: Span(
                  start: 33,
                  end: 36,
                ),
                inner: Interned(1515349274698079117, PhantomData),
              )),
              id: NodeId(4),
            )),
            id: NodeId(5),
          ), [
            Expression(
              span: Span(
                start: 37,
                end: 38,
              ),
              kind: Primary(Primary(
                span: Span(
                  start: 37,
                  end: 38,
                ),
                kind: IntLit(Symbol(
                  span: Span(
                    start: 37,
                    end: 38,
                  ),
                  inner: Interned(12543183117416492085, PhantomData),
                ), Decimal),
                id: NodeId(6),
              )),
              id: NodeId(7),
            ),
            Expression(
              span: Span(
                start: 40,
                end: 41,
              ),
              kind: Primary(Primary(
                span: Span(
                  start: 40,
                  end: 41,
                ),
                kind: IntLit(Symbol(
                  span: Span(
                    start: 40,
                    end: 41,
                  ),
                  inner: Interned(14671982871472631300, PhantomData),
                ), Decimal),
                id: NodeId(8),
              )),
              id: NodeId(9),
            ),
          ]),
          id: NodeId(10),
        )),
        id: NodeId(11),
      ),
      id: NodeId(12),
    )),
    FuncItem(FuncItem(
      span: Span(
        start: 46,
        end: 88,
      ),
      ident: Symbol(
        span: Span(
          start: 51,
          end: 54,
        ),
        inner: Interned(1515349274698079117, PhantomData),
      ),
      params: [
        (Symbol(
          span: Span(
            start: 55,
            end: 56,
          ),
          inner: Interned(14504427626919653262, PhantomData),
        ), Expression(
          span: Span(
            start: 58,
            end: 61,
          ),
          kind: Primary(Primary(
            span: Span(
              start: 58,
              end: 61,
            ),
            kind: I32,
            id: NodeId(13),
          )),
          id: NodeId(14),
        )),
        (Symbol(
          span: Span(
            start: 63,
            end: 64,
          ),
          inner: Interned(579860146683532731, PhantomData),
        ), Expression(
          span: Span(
            start: 66,
            end: 69,
          ),
          kind: Primary(Primary(
            span: Span(
              start: 66,
              end: 69,
            ),
            kind: I32,
            id: NodeId(15),
          )),
          id: NodeId(16),
        )),
      ],
      ret_ty: Some(Expression(
        span: Span(
          start: 71,
          end: 74,
        ),
        kind: Primary(Primary(
          span: Span(
            start: 71,
            end: 74,
          ),
          kind: I32,
          id: NodeId(17),
        )),
        id: NodeId(18),
      )),
      block: Block(
        span: Span(
          start: 75,
          end: 88,
        ),
        stmts: [],
        expr: Some(Expression(
          span: Span(
            start: 81,
            end: 86,
          ),
          kind: Add(Expression(
            span: Span(
              start: 81,
              end: 82,
            ),
            kind: Primary(Primary(
              span: Span(
                start: 81,
                end: 82,
              ),
              kind: Binding(Symbol(
                span: Span(
                  start: 81,
                  end: 82,
                ),
                inner: Interned(14504427626919653262, PhantomData),
              )),
              id: NodeId(19),
            )),
            id: NodeId(20),
          ), Expression(
            span: Span(
              start: 85,
              end: 86,
            ),
            kind: Primary(Primary(
              span: Span(
                start: 85,
                end: 86,
              ),
              kind: Binding(Symbol(
                span: Span(
                  start: 85,
                  end: 86,
                ),
                inner: Interned(579860146683532731, PhantomData),
              )),
              id: NodeId(21),
            )),
            id: NodeId(22),
          )),
          id: NodeId(23),
        )),
        id: NodeId(24),
      ),
      id: NodeId(25),
    )),
  ],
))
