crates/tackc_parser/src/ast/snapshots/tackc_parser__ast__prog__run_prog_test@basic.tck.snap
---
source: crates/tackc_parser/src/ast/prog.rs
expression: expr
input_file: crates/tackc_parser/src/ast/prog-parse/basic.tck
---
Ok(Program(
  span: Span(
    start: 0,
    end: 89,
  ),
  mod_stmt: ModStatement(
    span: Span(
      start: 0,
      end: 9,
    ),
    path: Path(
      span: Span(
        start: 4,
        end: 8,
      ),
      components: [
        Symbol(
          span: Span(
            start: 4,
            end: 8,
          ),
          inner: Interned(7250452609033638561, PhantomData),
        ),
      ],
      id: NodeId(
        node: 0,
        file: 5398104205920277468,
      ),
    ),
    id: NodeId(
      node: 1,
      file: 5398104205920277468,
    ),
  ),
  items: [
    FuncItem(FuncItem(
      span: Span(
        start: 11,
        end: 44,
      ),
      exported: false,
      ident: Symbol(
        span: Span(
          start: 16,
          end: 20,
        ),
        inner: Interned(812864953376315205, PhantomData),
      ),
      params: [],
      ret_ty: r#Some(Expression(
        span: Span(
          start: 23,
          end: 26,
        ),
        kind: Primary(Primary(
          span: Span(
            start: 23,
            end: 26,
          ),
          kind: I32,
          id: NodeId(
            node: 2,
            file: 5398104205920277468,
          ),
        )),
        id: NodeId(
          node: 3,
          file: 5398104205920277468,
        ),
      )),
      block: Block(
        span: Span(
          start: 27,
          end: 44,
        ),
        stmts: [],
        expr: Some(Expression(
          span: Span(
            start: 33,
            end: 42,
          ),
          kind: Call(Expression(
            span: Span(
              start: 33,
              end: 36,
            ),
            kind: Primary(Primary(
              span: Span(
                start: 33,
                end: 36,
              ),
              kind: Binding(Symbol(
                span: Span(
                  start: 33,
                  end: 36,
                ),
                inner: Interned(1515349274698079117, PhantomData),
              ), None),
              id: NodeId(
                node: 4,
                file: 5398104205920277468,
              ),
            )),
            id: NodeId(
              node: 5,
              file: 5398104205920277468,
            ),
          ), [
            Some(Expression(
              span: Span(
                start: 37,
                end: 38,
              ),
              kind: Primary(Primary(
                span: Span(
                  start: 37,
                  end: 38,
                ),
                kind: IntLit(Symbol(
                  span: Span(
                    start: 37,
                    end: 38,
                  ),
                  inner: Interned(12543183117416492085, PhantomData),
                ), Decimal),
                id: NodeId(
                  node: 6,
                  file: 5398104205920277468,
                ),
              )),
              id: NodeId(
                node: 7,
                file: 5398104205920277468,
              ),
            )),
            Some(Expression(
              span: Span(
                start: 40,
                end: 41,
              ),
              kind: Primary(Primary(
                span: Span(
                  start: 40,
                  end: 41,
                ),
                kind: IntLit(Symbol(
                  span: Span(
                    start: 40,
                    end: 41,
                  ),
                  inner: Interned(14671982871472631300, PhantomData),
                ), Decimal),
                id: NodeId(
                  node: 8,
                  file: 5398104205920277468,
                ),
              )),
              id: NodeId(
                node: 9,
                file: 5398104205920277468,
              ),
            )),
          ]),
          id: NodeId(
            node: 10,
            file: 5398104205920277468,
          ),
        )),
        id: NodeId(
          node: 11,
          file: 5398104205920277468,
        ),
      ),
      binding: None,
      id: NodeId(
        node: 12,
        file: 5398104205920277468,
      ),
    )),
    FuncItem(FuncItem(
      span: Span(
        start: 46,
        end: 88,
      ),
      exported: false,
      ident: Symbol(
        span: Span(
          start: 51,
          end: 54,
        ),
        inner: Interned(1515349274698079117, PhantomData),
      ),
      params: [
        (Symbol(
          span: Span(
            start: 55,
            end: 56,
          ),
          inner: Interned(14504427626919653262, PhantomData),
        ), Some(Expression(
          span: Span(
            start: 58,
            end: 61,
          ),
          kind: Primary(Primary(
            span: Span(
              start: 58,
              end: 61,
            ),
            kind: I32,
            id: NodeId(
              node: 13,
              file: 5398104205920277468,
            ),
          )),
          id: NodeId(
            node: 14,
            file: 5398104205920277468,
          ),
        )), None),
        (Symbol(
          span: Span(
            start: 63,
            end: 64,
          ),
          inner: Interned(579860146683532731, PhantomData),
        ), Some(Expression(
          span: Span(
            start: 66,
            end: 69,
          ),
          kind: Primary(Primary(
            span: Span(
              start: 66,
              end: 69,
            ),
            kind: I32,
            id: NodeId(
              node: 15,
              file: 5398104205920277468,
            ),
          )),
          id: NodeId(
            node: 16,
            file: 5398104205920277468,
          ),
        )), None),
      ],
      ret_ty: r#Some(Expression(
        span: Span(
          start: 71,
          end: 74,
        ),
        kind: Primary(Primary(
          span: Span(
            start: 71,
            end: 74,
          ),
          kind: I32,
          id: NodeId(
            node: 17,
            file: 5398104205920277468,
          ),
        )),
        id: NodeId(
          node: 18,
          file: 5398104205920277468,
        ),
      )),
      block: Block(
        span: Span(
          start: 75,
          end: 88,
        ),
        stmts: [],
        expr: Some(Expression(
          span: Span(
            start: 81,
            end: 86,
          ),
          kind: Add(Expression(
            span: Span(
              start: 81,
              end: 82,
            ),
            kind: Primary(Primary(
              span: Span(
                start: 81,
                end: 82,
              ),
              kind: Binding(Symbol(
                span: Span(
                  start: 81,
                  end: 82,
                ),
                inner: Interned(14504427626919653262, PhantomData),
              ), None),
              id: NodeId(
                node: 19,
                file: 5398104205920277468,
              ),
            )),
            id: NodeId(
              node: 20,
              file: 5398104205920277468,
            ),
          ), Expression(
            span: Span(
              start: 85,
              end: 86,
            ),
            kind: Primary(Primary(
              span: Span(
                start: 85,
                end: 86,
              ),
              kind: Binding(Symbol(
                span: Span(
                  start: 85,
                  end: 86,
                ),
                inner: Interned(579860146683532731, PhantomData),
              ), None),
              id: NodeId(
                node: 21,
                file: 5398104205920277468,
              ),
            )),
            id: NodeId(
              node: 22,
              file: 5398104205920277468,
            ),
          )),
          id: NodeId(
            node: 23,
            file: 5398104205920277468,
          ),
        )),
        id: NodeId(
          node: 24,
          file: 5398104205920277468,
        ),
      ),
      binding: None,
      id: NodeId(
        node: 25,
        file: 5398104205920277468,
      ),
    )),
  ],
  id: NodeId(
    node: 26,
    file: 5398104205920277468,
  ),
))
